feat: Hubspot plugin

--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -28,6 +28,8 @@ hackernews:
   - plugins/source/hackernews/**/*
 heroku:
   - plugins/source/heroku/**/*
+hubspot:
+  - plugins/source/hubspot/**/*
 plausible:
   - plugins/source/plausible/**/*
 k8s:
