--- a/.github/workflows/wait_for_required_workflows.yml
+++ b/.github/workflows/wait_for_required_workflows.yml
@@ -56,6 +56,7 @@ jobs:
                            "plugins/source/gitlab",
                            "plugins/source/hackernews",
                            "plugins/source/heroku",
+                           "plugins/source/hubspot",
                            "plugins/source/k8s",
                            "plugins/source/okta",
                            "plugins/source/shopify",
