--- a/.github/workflows/source_azure.yml
+++ b/.github/workflows/source_azure.yml
@@ -69,9 +69,7 @@ jobs:
         run: make gen
       - name: Fail if generation updated files
         if: github.event_name == 'pull_request'
-        run: | 
-          git status -s
-          test "$(git status -s | wc -l)" -eq 0 || (git status -s; exit 1)
+        run: test "$(git status -s | wc -l)" -eq 0 || (git status -s; exit 1)
   validate-release:
     timeout-minutes: 30
     needs: [resolve-runner]
