Fixes to PKs, timestamps, docs and automation

--- a/.github/workflows/wait_for_required_workflows.yml
+++ b/.github/workflows/wait_for_required_workflows.yml
@@ -41,6 +41,7 @@ jobs:
             }
             let actions = ["cli",
                            "scaffold",
+                           "plugins/source/alicloud",
                            "plugins/source/aws",
                            "plugins/source/azure",
                            "plugins/source/azuredevops",
