--- a/plugins/source/alicloud/Makefile
+++ b/plugins/source/alicloud/Makefile
@@ -30,6 +30,7 @@ gen-mocks:
 gen-docs:
 	rm -rf ./docs/tables/*
 	go run main.go doc ./docs/tables
+	sed 's_(\(.*\))_(https://github.com/cloudquery/cloudquery/blob/main/plugins/source/alicloud/docs/tables/\1)_' docs/tables/README.md > ../../../website/pages/docs/plugins/sources/alicloud/tables.md
 
 .PHONY: build
 build:
