--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -76,5 +76,6 @@
   "plugins/source/hackernews": "1.1.1",
   "plugins/source/hackernews+FILLER": "0.0.0",
   "scaffold": "1.0.0",
-  "plugins/source/oracle": "1.0.1"
+  "plugins/source/oracle": "1.0.1",
+  "plugins/source/oracle+FILLER": "0.0.0"
 }
