--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -1,3 +1,5 @@
+alicloud:
+  - plugins/source/alicloud/**/*
 aws:
   - plugins/source/aws/**/*
 azure:
@@ -14,8 +16,6 @@ datadog:
   - plugins/source/datadog/**/*
 fastly:
   - plugins/source/fastly/**/*
-fuzz:
-  - plugins/source/fuzz/**/*
 gandi:
   - plugins/source/gandi/**/*
 gcp:
@@ -42,12 +42,18 @@ stripe:
   - plugins/source/stripe/**/*
 pagerduty:
   - plugins/source/pagerduty/**/*
+snyk:
+  - plugins/source/snyk/**/*
 terraform:
   - plugins/source/terraform/**/*
+tailscale:
+  - plugins/source/tailscale/**/*
 vercel:
   - plugins/source/vercel/**/*
 salesforce:
   - plugins/source/salesforce/**/*
+azblob:
+  - plugins/destination/azblob/**/*
 postgresql:
   - plugins/destination/postgresql/**/*
 sqlite:
@@ -66,6 +72,8 @@ bigquery:
   - plugins/destination/bigquery/**/*
 mongodb:
   - plugins/destination/mongodb/**/*
+mssql:
+  - plugins/destination/mssql/**/*
 neo4j:
   - plugins/destination/neo4j/**/*
 kafka:
