--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -76,7 +76,9 @@
   "plugins/source/hackernews": "1.1.3",
   "plugins/source/hackernews+FILLER": "0.0.0",
   "scaffold": "1.0.0",
+  "scaffold+FILLER": "0.0.0",
   "plugins/source/oracle": "1.0.1",
   "plugins/source/oracle+FILLER": "0.0.0",
-  "plugins/source/alicloud": "1.0.0"
+  "plugins/source/alicloud": "1.0.0",
+  "plugins/source/alicloud+FILLER": "1.0.0"
 }
