--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -80,5 +80,6 @@
   "plugins/source/oracle": "1.0.1",
   "plugins/source/oracle+FILLER": "0.0.0",
   "plugins/source/alicloud": "1.0.0",
-  "plugins/source/alicloud+FILLER": "0.0.0"
+  "plugins/source/alicloud+FILLER": "0.0.0",
+  "plugins/destination/mssql": "1.0.0"
 }
