feat: New Plausible source plugin

--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -30,6 +30,8 @@ hackernews:
   - plugins/source/hackernews/**/*
 heroku:
   - plugins/source/heroku/**/*
+plausible:
+  - plugins/source/plausible/**/*
 okta:
   - plugins/source/okta/**/*
 oracle:
