--- a/release-please-config.json
+++ b/release-please-config.json
@@ -28,6 +28,7 @@
     "plugins/source/tailscale": { "component": "plugins-source-tailscale" },
     "plugins/source/vercel": { "component": "plugins-source-vercel" },
     "plugins/source/pagerduty": {"component": "plugins-source-pagerduty"},
+    "plugins/source/plausible": {"component": "plugins-source-plausible"},
     "plugins/source/test": { "component": "plugins-source-test" },
     "plugins/source/terraform": { "component": "plugins-source-terraform" },
     "plugins/destination/postgresql": {
