--- a/.github/workflows/wait_for_required_workflows.yml
+++ b/.github/workflows/wait_for_required_workflows.yml
@@ -82,6 +82,7 @@ jobs:
                            "plugins/destination/azblob",
                            "plugins/destination/gcs",
                            "plugins/destination/s3",
+                           "plugins/destination/firehose",
                            "plugins/destination/neo4j",
                            "plugins/destination/kafka",
                            "plugins/destination/mssql",
