--- a/release-please-config.json
+++ b/release-please-config.json
@@ -76,5 +76,6 @@
   },
   "tag-separator": "-",
   "separate-pull-requests": true,
-  "pull-request-title-pattern": "chore${scope}: Release${component} v${version}"
+  "pull-request-title-pattern": "chore${scope}: Release${component} v${version}",
+  "sequential-calls": true
 }
