feat(launchdarkly): LaunchDarkly source plugin

--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -32,6 +32,8 @@ plausible:
   - plugins/source/plausible/**/*
 k8s:
   - plugins/source/k8s/**/*
+launchdarkly:
+  - plugins/source/launchdarkly/**/*
 mixpanel:
   - plugins/source/mixpanel/**/*
 okta:
