--- a/release-please-config.json
+++ b/release-please-config.json
@@ -20,6 +20,7 @@
     "plugins/source/hackernews": { "component": "plugins-source-hackernews" },
     "plugins/source/heroku": { "component": "plugins-source-heroku" },
     "plugins/source/k8s": { "component": "plugins-source-k8s" },
+    "plugins/source/launchdarkly": { "component": "plugins-source-launchdarkly" },
     "plugins/source/okta": { "component": "plugins-source-okta" },
     "plugins/source/oracle": {"component": "plugins-source-oracle"},
     "plugins/source/salesforce": { "component": "plugins-source-salesforce" },
