--- a/website/package.json
+++ b/website/package.json
@@ -23,7 +23,8 @@
     "prismjs": "1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "2.4.0"
+    "react-hot-toast": "2.4.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
