--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -90,7 +90,9 @@
   "plugins/source/stripe": "1.0.1",
   "plugins/source/stripe+FILLER": "0.0.0",
   "plugins/source/mixpanel": "1.0.0",
+  "plugins/source/mixpanel+FILLER": "0.0.0",
   "plugins/source/hubspot": "1.0.0",
+  "plugins/source/hubspot+FILLER": "0.0.0",
   "plugins/source/launchdarkly": "1.0.0",
   "plugins/source/launchdarkly+FILLER": "0.0.0"
 }
