--- a/.github/workflows/release_scaffold.yml
+++ b/.github/workflows/release_scaffold.yml
@@ -46,7 +46,7 @@ jobs:
           version: latest
           install-only: true
       - name: Run GoReleaser Dry-Run
-        run: goreleaser release --snapshot --rm-dist --skip-validate --skip-publish -f ./scaffold/.goreleaser.yaml
+        run: goreleaser release --snapshot --clean --skip-validate --skip-publish -f ./scaffold/.goreleaser.yaml
         env:
           GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
           GORELEASER_CURRENT_TAG: ${{ github.ref_name }}
@@ -54,7 +54,7 @@ jobs:
       # Publish to GitHub and Homebrew
       - name: Run GoReleaser Release
         if: steps.semver_parser.outputs.prerelease == ''
-        run: goreleaser release --rm-dist -f ./scaffold/.goreleaser.yaml
+        run: goreleaser release --clean -f ./scaffold/.goreleaser.yaml
         env:
           GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
           GORELEASER_CURRENT_TAG: ${{ github.ref_name }}
@@ -64,7 +64,7 @@ jobs:
       # Publish only to GitHub
       - name: Run GoReleaser PreRelease
         if: steps.semver_parser.outputs.prerelease != ''
-        run: goreleaser release --rm-dist -f ./scaffold/.goreleaser.prerelease.yaml
+        run: goreleaser release --clean -f ./scaffold/.goreleaser.prerelease.yaml
         env:
           GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
           GORELEASER_CURRENT_TAG: ${{ github.ref_name }}
