--- a/release-please-config.json
+++ b/release-please-config.json
@@ -81,7 +81,7 @@
   },
   "tag-separator": "-",
   "separate-pull-requests": true,
-  "pull-request-title-pattern": "chore${scope}: Release${component} v${version}",
+  "pull-request-title-pattern": "chore${scope}: Release${component} v${version} test",
   "sequential-calls": true
 }
 
