--- a/website/vercel.json
+++ b/website/vercel.json
@@ -14,6 +14,14 @@
       "destination": "https://discord.gg/QwnWfrcfHg"
     },
     {
+      "source": "/discrod",
+      "destination": "https://discord.gg/QwnWfrcfHg"
+    },
+    {
+      "source": "/dicsord",
+      "destination": "https://discord.gg/QwnWfrcfHg"
+    },
+    {
       "source": "/og-image/:title",
       "destination": "https://img.abyssale.com/3b183707-abf0-46ec-9edd-16b712a08b65?text_title=:title"
     },
