--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-plugins/source/**/docs/tables/*.md linguist-generated
+plugins/source/**/docs/tables/README.md linguist-generated
 website/pages/docs/plugins/sources/**/tables.md linguist-generated
