--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -90,6 +90,8 @@ kafka:
   - plugins/destination/kafka/**/*
 firehose:
   - plugins/destination/firehose/**/*  
+clickhouse:
+  - plugins/destination/clickhouse/**/*
 website:
   - website/**/*
 cli:
