--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -97,5 +97,6 @@
   "plugins/source/launchdarkly+FILLER": "0.0.0",
   "plugins/destination/elasticsearch": "1.0.4",
   "plugins/destination/elasticsearch+FILLER": "0.0.0",
-  "plugins/destination/clickhouse": "1.0.0"
+  "plugins/destination/clickhouse": "1.0.0",
+  "plugins/destination/clickhouse+FILLER": "0.0.0"
 }
