chore(clickhouse): Add `clickhouse` to pr labeler (#8064)

--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -88,6 +88,8 @@ kafka:
   - plugins/destination/kafka/**/*
 firehose:
   - plugins/destination/firehose/**/*  
+clickhouse:
+  - plugins/destination/clickhouse/**/*
 website:
   - website/**/*
 cli:
