--- a/.github/pr_labeler.yml
+++ b/.github/pr_labeler.yml
@@ -2,6 +2,8 @@ alicloud:
   - plugins/source/alicloud/**/*
 aws:
   - plugins/source/aws/**/*
+aws-pricing:
+  - plugins/source/aws-pricing/**/*  
 azure:
   - plugins/source/azure/**/*
 azuredevops:
