--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -3,6 +3,8 @@
   "cli+FILLER": "0.0.0",
   "plugins/source/aws": "15.0.0",
   "plugins/source/aws+FILLER": "0.0.0",
+  "plugins/source/aws-pricing": "0.0.0",
+  "plugins/source/aws-pricing+FILLER": "0.0.0",  
   "plugins/source/azure": "4.1.1",
   "plugins/source/azure+FILLER": "0.0.0",
   "plugins/source/cloudflare": "3.1.6",
