--- a/plugins/source/postgresql/Makefile
+++ b/plugins/source/postgresql/Makefile
@@ -9,9 +9,7 @@ lint:
 
 .PHONY: gen-docs
 gen-docs:
-	rm -rf ./docs/tables/*
-	go run main.go doc ./docs/tables
-	sed 's_(\(.*\))_(https://github.com/cloudquery/cloudquery/blob/main/plugins/source/postgresql/docs/tables/\1)_' docs/tables/README.md > ../../../website/pages/docs/plugins/sources/postgresql/tables.md
+	echo "skipping docs generation for postgresql source plugin"
 
 # All gen targets
 .PHONY: gen
